--- a/CDS.CSharpScripting/packages.config
+++ b/CDS.CSharpScripting/packages.config
@@ -1,34 +1,41 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Humanizer.Core" version="2.2.0" targetFramework="net48" />
+  <package id="Humanizer.Core" version="2.11.10" targetFramework="net48" />
   <package id="jacobslusser.ScintillaNET" version="3.6.3" targetFramework="net48" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net48" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="3.0.0" targetFramework="net48" developmentDependency="true" />
-  <package id="Microsoft.CodeAnalysis.AnalyzerUtilities" version="3.0.0" targetFramework="net48" />
-  <package id="Microsoft.CodeAnalysis.Common" version="3.6.0" targetFramework="net48" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="3.6.0" targetFramework="net48" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Features" version="3.6.0" targetFramework="net48" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="3.6.0" targetFramework="net48" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="3.6.0" targetFramework="net48" />
-  <package id="Microsoft.CodeAnalysis.Features" version="3.6.0" targetFramework="net48" />
-  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="3.6.0" targetFramework="net48" />
-  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="3.6.0" targetFramework="net48" />
-  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net48" />
+  <package id="MessagePack" version="2.3.85" targetFramework="net48" />
+  <package id="MessagePack.Annotations" version="2.3.85" targetFramework="net48" />
+  <package id="MessagePackAnalyzer" version="2.3.85" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="3.3.3" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.AnalyzerUtilities" version="3.3.3" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.Common" version="3.11.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="3.11.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Features" version="3.11.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="3.11.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="3.11.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.Features" version="3.11.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="3.11.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="3.11.0" targetFramework="net48" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
   <package id="Microsoft.DiaSymReader" version="1.3.0" targetFramework="net48" />
-  <package id="NuGet.CommandLine" version="5.7.0" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.VisualStudio.Debugger.Contracts" version="17.2.0" targetFramework="net48" />
+  <package id="NuGet.CommandLine" version="5.11.0" targetFramework="net48" developmentDependency="true" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
-  <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net48" />
-  <package id="System.Composition" version="1.0.31" targetFramework="net48" />
-  <package id="System.Composition.AttributedModel" version="1.0.31" targetFramework="net48" />
-  <package id="System.Composition.Convention" version="1.0.31" targetFramework="net48" />
-  <package id="System.Composition.Hosting" version="1.0.31" targetFramework="net48" />
-  <package id="System.Composition.Runtime" version="1.0.31" targetFramework="net48" />
-  <package id="System.Composition.TypedParts" version="1.0.31" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="5.0.0" targetFramework="net48" />
+  <package id="System.Composition" version="5.0.1" targetFramework="net48" />
+  <package id="System.Composition.AttributedModel" version="5.0.1" targetFramework="net48" />
+  <package id="System.Composition.Convention" version="5.0.1" targetFramework="net48" />
+  <package id="System.Composition.Hosting" version="5.0.1" targetFramework="net48" />
+  <package id="System.Composition.Runtime" version="5.0.1" targetFramework="net48" />
+  <package id="System.Composition.TypedParts" version="5.0.1" targetFramework="net48" />
+  <package id="System.IO.Pipelines" version="5.0.1" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
-  <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net48" />
-  <package id="System.Text.Encoding.CodePages" version="4.5.1" targetFramework="net48" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net48" />
+  <package id="System.Reflection.Emit" version="4.7.0" targetFramework="net48" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.7.0" targetFramework="net48" />
+  <package id="System.Reflection.Metadata" version="5.0.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
+  <package id="System.Text.Encoding.CodePages" version="5.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
