--- a/ScratchPad/ScratchPad.csproj
+++ b/ScratchPad/ScratchPad.csproj
@@ -5,10 +5,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{92334FFF-56EE-436D-BE17-B97D978ED258}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
-    <RootNamespace>WindowsFormsAppDemo</RootNamespace>
-    <AssemblyName>WindowsFormsAppDemo</AssemblyName>
+    <ProjectGuid>{B70CB59D-6EB1-4879-9C1B-CF36F433C2D7}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>ScratchPad</RootNamespace>
+    <AssemblyName>ScratchPad</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -128,133 +128,23 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Common.cs" />
-    <Compile Include="FormNonDefaultTypesDemo.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormNonDefaultTypesDemo.Designer.cs">
-      <DependentUpon>FormNonDefaultTypesDemo.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormAysncWithCancelScriptDemo.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormAysncWithCancelScriptDemo.Designer.cs">
-      <DependentUpon>FormAysncWithCancelScriptDemo.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormRunManyDemo.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormRunManyDemo.Designer.cs">
-      <DependentUpon>FormRunManyDemo.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormGlobalsDemo.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormGlobalsDemo.Designer.cs">
-      <DependentUpon>FormGlobalsDemo.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormReturnListDemo.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormReturnListDemo.Designer.cs">
-      <DependentUpon>FormReturnListDemo.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormBasicDemo.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormBasicDemo.Designer.cs">
-      <DependentUpon>FormBasicDemo.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormMain.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMain.Designer.cs">
-      <DependentUpon>FormMain.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Completions1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Prototyping\FormScin2.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Prototyping\FormScin2.Designer.cs">
-      <DependentUpon>FormScin2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Prototyping\FormScin1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Prototyping\FormScin1.Designer.cs">
-      <DependentUpon>FormScin1.cs</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="FormNonDefaultTypesDemo.resx">
-      <DependentUpon>FormNonDefaultTypesDemo.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormAysncWithCancelScriptDemo.resx">
-      <DependentUpon>FormAysncWithCancelScriptDemo.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormRunManyDemo.resx">
-      <DependentUpon>FormRunManyDemo.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormGlobalsDemo.resx">
-      <DependentUpon>FormGlobalsDemo.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormReturnListDemo.resx">
-      <DependentUpon>FormReturnListDemo.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormBasicDemo.resx">
-      <DependentUpon>FormBasicDemo.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMain.resx">
-      <DependentUpon>FormMain.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="Prototyping\FormScin2.resx">
-      <DependentUpon>FormScin2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Prototyping\FormScin1.resx">
-      <DependentUpon>FormScin1.cs</DependentUpon>
-    </EmbeddedResource>
-    <None Include="packages.config" />
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\CDS.CSharpScripting\CDS.CSharpScripting.csproj">
-      <Project>{931cc421-e9a5-420b-bd21-385a3cfd9a77}</Project>
-      <Name>CDS.CSharpScripting</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\MessagePackAnalyzer.2.3.85\analyzers\dotnet\MessagePackAnalyzer.dll" />
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.3.3.3\analyzers\dotnet\cs\Microsoft.CodeAnalysis.Analyzers.dll" />
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.3.3.3\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
   </ItemGroup>
-  <Import Project="..\SharedAssemblyInfo\SharedAssemblyInfo.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
