--- a/WindowsFormsAppDemo/WindowsFormsAppDemo.csproj
+++ b/WindowsFormsAppDemo/WindowsFormsAppDemo.csproj
@@ -64,6 +64,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common.cs" />
+    <Compile Include="FormReuseEditorDemo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormReuseEditorDemo.Designer.cs">
+      <DependentUpon>FormReuseEditorDemo.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormNonDefaultTypesDemo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +114,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormReuseEditorDemo.resx">
+      <DependentUpon>FormReuseEditorDemo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormNonDefaultTypesDemo.resx">
       <DependentUpon>FormNonDefaultTypesDemo.cs</DependentUpon>
     </EmbeddedResource>
