--- a/CDS.CSharpScripting/app.config
+++ b/CDS.CSharpScripting/app.config
@@ -18,6 +18,14 @@
         <assemblyIdentity name="System.Collections.Immutable" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.2.5.0" newVersion="1.2.5.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Humanizer" publicKeyToken="979442b78dfc278e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.13.0.0" newVersion="2.13.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="ICSharpCode.AvalonEdit" publicKeyToken="9cc39be672370310" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.1.2.30" newVersion="6.1.2.30" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
